# opnic

./: CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE.md  README.md  build.sh
cmake/: armv7em-none-eabi-gcc.cmake  doxygen.cmake  formatter.cmake
doc/datasheets/: LT177ML37-CAD.dxf  LT177ML37-FPC-A0.dxf
firmware/board/: nubix_opnic.h
firmware/cpp/: CMakeLists.txt  README.md
firmware/cpp/libtest/: CMakeLists.txt  README.md  main.cpp
firmware/cpp/snake/: CMakeLists.txt  README.md
firmware/cpp/snake/inc/: BlackHole.hpp  Booster.hpp  Bumper.hpp  Coin.hpp  Coordinates.hpp  DynamicImageLoader.hpp  FrameView.hpp  Game.hpp  Headline.hpp  Object.hpp  Physics.hpp  Snake.hpp  Text.hpp  Viewport.hpp  World.hpp
firmware/cpp/snake/sprites/: README.md
firmware/cpp/snake/src/: BlackHole.cpp  Booster.cpp  Bumper.cpp  Coin.cpp  DynamicImageLoader.cpp  FrameView.cpp  Game.cpp  Headline.cpp  Object.cpp  Physics.cpp  Snake.cpp  Text.cpp  Viewport.cpp  World.cpp  main.cpp
firmware/micropython/: README.md  build.sh
firmware/micropython/gc9106/: apple.py  display.py  gc9106.py  main.py  mcu_interface.py  utils.py
firmware/micropython/touch/: main.py  touch_sensor.py
hardware/: README.md  opnic.brd  opnic.sch
utils/: 99-pico.rules  README.md  discover_prime.py  from_unity.py  image_to_code.py  opnic.rules  png_compress.sh  probe-openocd.cfg  probe.cfg  ssh-openocd.cfg  ssh.cfg  utils.sh
